--- a/index.html
+++ b/index.html
@@ -1,86 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="This is a page for WDD 131 - Dynamic Web Fundamentals and is an introduction to me (Caitlin Evans) and will link to areas of the class">
-    <meta name="author" content="Caitlin Evans">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="This is a page for WDD 131 - Dynamic Web Fundamentals and is an introduction to me (Caitlin Evans) and will link to areas of the class"
+    />
+    <meta name="author" content="Caitlin Evans" />
     <title>WDD 131 - Dynamic Web Fundamentals | Caitlin Evans</title>
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/base.css" />
     <!-- GOOGLE FONTS PRECONNECT -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- GOOGLE FONTS -->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="scripts/getdates.js"></script>
-</head>
-<body>
-
+  </head>
+  <body>
     <div class="container">
-        <header>
-            <h1>WDD 131: Dynamic Web Fundamentals - Caitlin Evans</h1>
-            <nav aria-label="Main Navigation">
-                <ul>
-                    <li><a href="#" aria-label="Go to Home Page">Home</a></li>
-                    <li><a href="#" target="_blank" aria-label="View my Final Project">Final Project</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p23-p27#p27" aria-label="View my favorite Scripture">Favorite Scripture</a></li>
-                    <li><a href="https://byui.instructure.com/" target="_blank" aria-label="Visit I-Learn">I-Learn</a></li>
-                    <li><a href="https://linkedin.com" target="_blank" aria-label="Visit LinkedIn">LinkedIn</a></li>
-                    <li><a href="https://facebook.com" target="_blank" aria-label="Visit Facebook">Facebook</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="main-content">
-                <section class="card">
-                    <h2>Hi! I am Caitlin</h2>
-                    <p>I am an outdoor enthusiast and enjoy archery, hiking, and photography. I also love building websites and learning new technologies!</p>
-                    <img src="images/profile.png" width="200" alt="Profile picture of Caitlin Evans" class="profile-img">
-                </section>
-                <section class="card">
-                    <h2>I Love Archery</h2>
-                    <p>Archery is one of my favorite pastimes, allowing me to focus and enjoy the outdoors.</p>
-                    <img src="images/payson-temple.jpg" width="200" alt="Payson Temple image">
-                </section>
-            </div>
+      <header>
+        <h1>WDD 131: Dynamic Web Fundamentals - Caitlin Evans</h1>
+        <nav aria-label="Main Navigation">
+          <ul>
+            <li><a href="#" aria-label="Go to Home Page">Home</a></li>
+            <li>
+              <a href="#" target="_blank" aria-label="View my Final Project"
+                >Final Project</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p23-p27#p27"
+                aria-label="View my favorite Scripture"
+                >Favorite Scripture</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://byui.instructure.com/"
+                target="_blank"
+                aria-label="Visit I-Learn"
+                >I-Learn</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://linkedin.com"
+                target="_blank"
+                aria-label="Visit LinkedIn"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://facebook.com"
+                target="_blank"
+                aria-label="Visit Facebook"
+                >Facebook</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <div class="main-content">
+          <section class="card">
+            <h2>Hi! I am Caitlin</h2>
+            <p>
+              I am an outdoor enthusiast and enjoy archery, hiking, and
+              photography. I also love building websites and learning new
+              technologies!
+            </p>
+            <img
+              src="images/profile.png"
+              width="200"
+              alt="Profile picture of Caitlin Evans"
+              class="profile-img"
+            />
+          </section>
+          <section class="card">
+            <h2>I Love Archery</h2>
+            <p>
+              Archery is one of my favorite pastimes, allowing me to focus and
+              enjoy the outdoors.
+            </p>
+            <img
+              src="images/payson-temple.jpg"
+              width="200"
+              alt="Payson Temple image"
+            />
+          </section>
+        </div>
 
-            <aside>
-                <h3>Quick Links & Resources</h3>
-                <ul>
-                    <li><a href="#">Web Development Community</a></li>
-                    <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
-                    <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
-                    <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
-                    <li><a href="https://www.w3.org/TR/WCAG22/">W3C Accessibility for 2.2</a></li>
-                    
-                </ul>
-                <h3>Assignment Links</h3>
-                <h4>Week 02</h4>
-                <ul>
-                    <li><a href="../wdd131/week02/bom.html" target="_blank">BOM</a></li>
-                    <li><a href="../wdd131/week02/media-query.html" target="_blank">Media Query</a></li>
-                    <li><a href="../wdd131/week02/temples.html" target="_blank" >Temple Gallery</a></li>
-                </ul>
-                <h4>Week 03</h4>
-                <ul>
-                    <li><a href="../wdd131/week03/design.html" target="_blank">Design</a></li>
-                    <li><a href="https://codepen.io/CaitlinMEvans/pen/PoMgqOa">Psuedo-Classes on Code Pen</a></li>
-                    <li><a href="https://codepen.io/CaitlinMEvans/pen/BaXENrq">Psuedo-Elements on Code Pen</a></li>
-                    <li><a href="../wdd131/week03/responsive-images.html" target="_blank">Responsive Images</a></li>
-                    <li><a href="../wdd131/week03/place.html" target="_blank">Discover Ireland</a></li>
-                </ul>
-                <h4>Week 04</h4>
-                <ul>
-                    <li><a href="../wdd131/week04/table.html" target="_blank">Feature Table</a></li>
-                    <li><a href="../wdd131/week04/lazyloading.html" target="_blank">Lazy Loading</a></li>
-                    <li><a href="../wdd131/week04/filtered-temples.html" target="_blank">Filtered Temples</a></li>
-                </ul>
-            </aside>
-        </main>
-        <footer>
-            <p>&copy; <span id="copyright-year"></span> Caitlin Evans | Utah, USA</p>
-            <p>Date Last Modified: <span id="last-modified"></span></p>
-        </footer>
+        <aside>
+          <h3>Quick Links & Resources</h3>
+          <ul>
+            <li><a href="#">Web Development Community</a></li>
+            <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+            <li>
+              <a href="https://www.smashingmagazine.com/">Smashing Magazine</a>
+            </li>
+            <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+            <li>
+              <a href="https://www.w3.org/TR/WCAG22/"
+                >W3C Accessibility for 2.2</a
+              >
+            </li>
+          </ul>
+          <h3>Assignment Links</h3>
+          <h4>Week 02</h4>
+          <ul>
+            <li><a href="../wdd131/week02/bom.html" target="_blank">BOM</a></li>
+            <li>
+              <a href="../wdd131/week02/media-query.html" target="_blank"
+                >Media Query</a
+              >
+            </li>
+            <li>
+              <a href="../wdd131/week02/temples.html" target="_blank"
+                >Temple Gallery</a
+              >
+            </li>
+          </ul>
+          <h4>Week 03</h4>
+          <ul>
+            <li>
+              <a href="../wdd131/week03/design.html" target="_blank">Design</a>
+            </li>
+            <li>
+              <a href="https://codepen.io/CaitlinMEvans/pen/PoMgqOa"
+                >Psuedo-Classes on Code Pen</a
+              >
+            </li>
+            <li>
+              <a href="https://codepen.io/CaitlinMEvans/pen/BaXENrq"
+                >Psuedo-Elements on Code Pen</a
+              >
+            </li>
+            <li>
+              <a href="../wdd131/week03/responsive-images.html" target="_blank"
+                >Responsive Images</a
+              >
+            </li>
+            <li>
+              <a href="../wdd131/week03/place.html" target="_blank"
+                >Discover Ireland</a
+              >
+            </li>
+          </ul>
+          <h4>Week 04</h4>
+          <ul>
+            <li>
+              <a href="../wdd131/week04/table.html" target="_blank"
+                >Feature Table</a
+              >
+            </li>
+            <li>
+              <a href="../wdd131/week04/lazyloading.html" target="_blank"
+                >Lazy Loading</a
+              >
+            </li>
+            <li>
+              <a href="../wdd131/week04/filtered-temples.html" target="_blank"
+                >Filtered Temples</a
+              >
+            </li>
+          </ul>
+          <h4>Week 05</h4>
+          <ul>
+            <li>
+              <a href="../wdd131/form.html" target="_blank"
+                >Back to the Future Form</a
+              >
+            </li>
+            <li>
+              <a href="../wdd131/project/siteplan.html" target="_blank"
+                >Site Plan</a
+              >
+            </li>
+          </ul>
+        </aside>
+      </main>
+      <footer>
+        <p>
+          &copy; <span id="copyright-year"></span> Caitlin Evans | Utah, USA
+        </p>
+        <p>Date Last Modified: <span id="last-modified"></span></p>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
