--- a/form.html
+++ b/form.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Caitlin Evans" />
+    <meta
+      name="description"
+      content="This is a product review form for items from Back to the Future Franchise"
+    />
     <title>Back to the Future - Product Review</title>
     <link rel="stylesheet" href="styles/formStyles.css" />
     <script defer src="scripts/form.js"></script>
