--- a/review.html
+++ b/review.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Caitlin Evans" />
+    <meta
+      name="description"
+      content="This is a review submission page related to the Back to the Future Product Review Form"
+    />
     <title>Review Submitted</title>
     <link rel="stylesheet" href="styles/reviewStyles.css" />
     <script defer src="scripts/review.js"></script>
