added radio options

--- a/form.html
+++ b/form.html
@@ -73,6 +73,15 @@
             />
             <label for="feature-hoverboard">Hoverboard Compatibility</label>
           </div>
+          <div class="features">
+            <input
+              type="checkbox"
+              id="feature-futureShoes"
+              name="features"
+              value="Shoes"
+            />
+            <label for="feature-hoverboard">Self Lacing Shoes Only</label>
+          </div>
         </fieldset>
 
         <!-- Written Review -->
@@ -83,6 +92,59 @@
           rows="4"
           placeholder="Share your thoughts..."
         ></textarea>
+
+        <fieldset>
+          <legend>Which Back To The Future Movie Is Your Favorite:</legend>
+          <div class="features">
+            <input
+              type="radio"
+              id="feature-BTTF1"
+              name="movies"
+              value="Part 1"
+            />
+            <label for="feature-delorean">Back to the Future Part 1</label>
+          </div>
+          <div class="features">
+            <input
+              type="radio"
+              id="feature-BTTF2"
+              name="movies"
+              value="Part 2"
+            />
+            <label for="feature-delorean">Back to the Future Part 2</label>
+          </div>
+          <div class="features">
+            <input
+              type="radio"
+              id="feature-BTTF3"
+              name="movies"
+              value="Part 3"
+            />
+            <label for="feature-delorean">Back to the Future Part 3</label>
+          </div>
+          <div class="features">
+            <input
+              type="radio"
+              id="feature-hate"
+              name="movies"
+              value="HatedIt"
+            />
+            <label for="feature-delorean"
+              >Great Scott!! I hated them all...</label
+            >
+          </div>
+          <div class="features">
+            <input
+              type="radio"
+              id="feature-neverSeen"
+              name="movies"
+              value="neverSeen"
+            />
+            <label for="feature-delorean"
+              >I'm a butthead.. I have never seen the movies</label
+            >
+          </div>
+        </fieldset>
 
         <!-- User Name -->
         <label for="username">Your Name (optional):</label>
