--- a/form.html
+++ b/form.html
@@ -94,7 +94,9 @@
         ></textarea>
 
         <fieldset>
-          <legend>Which Back To The Future Movie Is Your Favorite:</legend>
+          <legend>
+            Which Back To The Future Movie Is Your Favorite (optional):
+          </legend>
           <div class="features">
             <input
               type="radio"
