update screenshots for moqups wireframes

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -88,49 +88,98 @@
               width="400"
               alt="Fonts Used"
             />
+            <h2>Wireframe Screenshots</h2>
+            <h3>Index Desktop Wireframe</h3>
+            <a
+              href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a00ce227e"
+              target="_blank"
+              ><img
+                src="images/wireframe_index.jpg"
+                alt="Index 1 Wireframe desktop view"
+            /></a>
+            <h3>Index Mobile Wireframe</h3>
+            <a
+              href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a0e2c5b99"
+              target="_blank"
+              ><img
+                src="images/wireframe_mobile.jpg"
+                alt="Index 1 Wireframe in a mobile view"
+            /></a>
+            <h3>About Desktop Wireframe</h3>
+            <a
+              href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/aa4caf0d4"
+              target="_blank"
+              ><img
+                src="images/wireframe_about.jpg"
+                alt="About Wireframe desktop view"
+            /></a>
+            <h3>Services Desktop Wireframe</h3>
+            <a
+              href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/afca17199"
+              target="_blank"
+              ><img
+                src="images/wireframe_services.jpg"
+                alt="Services Wireframe desktop view"
+            /></a>
+            <h3>FAQs Desktop Wireframe</h3>
+            <a
+              href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a9a32848e"
+              target="_blank"
+              ><img
+                src="images/wireframe_FAQs.jpg"
+                alt="FAQs Wireframe desktop view"
+            /></a>
+            <h3>Contact / Book Desktop Wireframe</h3>
+            <a
+              href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/af4332f1d"
+              target="_blank"
+              ><img
+                src="images/wireframe_contact.jpg"
+                alt="Contact Wireframe desktop view"
+            /></a>
           </section>
         </div>
         <aside>
-          <h3>Project Wireframes</h3>
+          <h3>Project Wireframes via URL Links</h3>
           <ul>
             <li>
               <a
-                href="https://app.moqups.com/zCzqXicRWqUftawNQqhnadXk3PTcI1Qb/view/page/a3d64d6d7?ui=0"
+                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a00ce227e"
                 target="_blank"
                 >Index 1</a
               >
             </li>
             <li>
               <a
-                href="https://app.moqups.com/zCzqXicRWqUftawNQqhnadXk3PTcI1Qb/view/page/aa662692e"
+                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a0e2c5b99"
                 target="_blank"
-                >Index 2</a
+                >Index Mobile</a
               >
             </li>
             <li>
               <a
-                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/aa4caf0d4?ui=0"
+                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/aa4caf0d4"
                 target="_blank"
                 >About</a
               >
             </li>
             <li>
               <a
-                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/afca17199?ui=0"
+                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/afca17199"
                 target="_blank"
                 >Services</a
               >
             </li>
             <li>
               <a
-                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a9a32848e?ui=0"
+                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/a9a32848e"
                 target="_blank"
                 >FAQs</a
               >
             </li>
             <li>
               <a
-                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/af4332f1d?ui=0"
+                href="https://app.moqups.com/d5dStUQr5BBiBDbODM76CHxitnoh4RQj/view/page/af4332f1d"
                 target="_blank"
                 >Contact / Book</a
               >
