--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
           <ul>
             <li><a href="#" aria-label="Go to Home Page">Home</a></li>
             <li>
-              <a href="#" target="_blank" aria-label="View my Final Project"
+              <a
+                href="/project/index.html"
+                target="_blank"
+                aria-label="View my Final Project"
                 >Final Project</a
               >
             </li>
