--- a/project/about.html
+++ b/project/about.html
@@ -8,7 +8,7 @@
       content="New Venture Therapy - Final Project Home Page"
     />
     <meta name="author" content="Caitlin Evans" />
-    <title>New Venture Therapy - Home</title>
+    <title>New Venture Therapy - About New Venture Therapy</title>
     <link rel="stylesheet" href="styles/nvt_base.css" />
     <link rel="stylesheet" href="styles/nvt_responsive.css" />
     <link rel="stylesheet" href="styles/dark-mode.css" />
