--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#" aria-label="Go to Home Page">Home</a></li>
             <li>
               <a
-                href="/project/index.html"
+                href="project/index.html"
                 target="_blank"
                 aria-label="View my Final Project"
                 >Final Project</a
