--- a/project/about.html
+++ b/project/about.html
@@ -54,12 +54,12 @@
 
             <!-- Bottom Left: Large Image -->
             <div class="image-left">
-              <img src="images/office.jpg" alt="Therapy office" />
+              <img src="images/office.webp" alt="Therapy office" />
             </div>
 
             <!-- Bottom Right: Small Image (cut-off illusion) -->
             <div class="image-right">
-              <img src="images/office.jpg" alt="Therapy office" />
+              <img src="images/office2.webp" alt="Therapy office" />
             </div>
           </div>
         </section>
@@ -255,7 +255,7 @@
         <section class="cta-section">
           <div class="cta-container">
             <div class="cta-image">
-              <img src="images/comfort_hands.jpg" alt="Therapy Session" />
+              <img src="images/comfort_hands.webp" alt="Therapy Session" />
             </div>
             <div class="cta-content bg-yellow">
               <p class="subheading italic">Commute or not Commute</p>
