--- a/project/index.html
+++ b/project/index.html
@@ -54,7 +54,10 @@
         </section>
         <!-- Overlapping Image Section -->
         <section class="overlapping-image">
-          <img src="images/comfort_hands.jpg" alt="Overlapping Section Image" />
+          <img
+            src="images/comfort_hands.webp"
+            alt="Overlapping Section Image"
+          />
         </section>
         <!-- About Amanda Section -->
         <section class="bg-black">
@@ -106,7 +109,10 @@
             </div>
           </div>
           <div class="image-right">
-            <img src="images/chairs_twoPeople.jpg" alt="Therapy illustration" />
+            <img
+              src="images/chairs_twoPeople.webp"
+              alt="Therapy illustration"
+            />
           </div>
         </section>
 
@@ -141,7 +147,7 @@
               </p>
             </div>
             <div class="service-card">
-              <img src="images/couple.jpg" alt="Couple Therapy" />
+              <img src="images/couple.webp" alt="Couple Therapy" />
               <h3>Couple</h3>
               <p>
                 Strengthen your bond and improve communication with your
@@ -150,7 +156,7 @@
               </p>
             </div>
             <div class="service-card">
-              <img src="images/multiple.jpg" alt="Family Therapy" />
+              <img src="images/multiple.webp" alt="Family Therapy" />
               <h3>Family</h3>
               <p>
                 Navigate family dynamics and improve understanding among loved
@@ -160,7 +166,7 @@
               </p>
             </div>
             <div class="service-card">
-              <img src="images/adolecent.jpg" alt="Adolescent Therapy" />
+              <img src="images/adolecent.webp" alt="Adolescent Therapy" />
               <h3>Adolescent</h3>
               <p>
                 Adolescent therapy helps young individuals navigate growth and
@@ -202,7 +208,7 @@
               </div>
             </div>
             <div class="image-container">
-              <img src="images/office.jpg" alt="Appointment illustration" />
+              <img src="images/office.webp" alt="Appointment illustration" />
             </div>
           </div>
         </section>
