--- a/project/book.html
+++ b/project/book.html
@@ -187,7 +187,7 @@
 
             <!-- Right Side - Office Image -->
             <div class="visit-image">
-              <img src="images/diagnosis.jpg" alt="Modern therapy office" />
+              <img src="images/diagnosis.webp" alt="Modern therapy office" />
             </div>
           </div>
         </section>
