--- a/project/about.html
+++ b/project/about.html
@@ -172,39 +172,45 @@
           </div>
         </section>
         <!-- specialty highlight -->
-        <section class="specialty-section">
-          <div class="specialty-container">
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Depression" />
-              <div class="specialty-label bg-blue">Depression</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Stress" />
-              <div class="specialty-label bg-yellow">Stress</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Abuse" />
-              <div class="specialty-label bg-green">Abuse</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Grief" />
-              <div class="specialty-label bg-red">Grief</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Divorce" />
-              <div class="specialty-label bg-orange">Divorce</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Children" />
-              <div class="specialty-label bg-red">Children</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Addiction" />
-              <div class="specialty-label bg-blue">Addiction</div>
-            </div>
-            <div class="specialty-card">
-              <img src="images/placeholder.png" alt="Relationships" />
-              <div class="specialty-label bg-yellow">Relationships</div>
+        <section class="content">
+          <p class="subheading color-green">Special Cases need Special Care</p>
+          <h2 class="heading">
+            Areas of life I <span class="color-green">specialize</span> in.
+          </h2>
+          <div class="specialty-section">
+            <div class="specialty-container">
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Depression" />
+                <div class="specialty-label bg-blue">Depression</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Stress" />
+                <div class="specialty-label bg-yellow">Stress</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Abuse" />
+                <div class="specialty-label bg-green">Abuse</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Grief" />
+                <div class="specialty-label bg-red">Grief</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Divorce" />
+                <div class="specialty-label bg-orange">Divorce</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Children" />
+                <div class="specialty-label bg-red">Children</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Addiction" />
+                <div class="specialty-label bg-blue">Addiction</div>
+              </div>
+              <div class="specialty-card">
+                <img src="images/placeholder.png" alt="Relationships" />
+                <div class="specialty-label bg-yellow">Relationships</div>
+              </div>
             </div>
           </div>
         </section>
