--- a/project/index.html
+++ b/project/index.html
@@ -53,12 +53,12 @@
           </div>
         </section>
         <!-- Overlapping Image Section -->
-        <section class="overlapping-image">
+        <div class="overlapping-image">
           <img
             src="images/comfort_hands.webp"
             alt="Overlapping Section Image"
           />
-        </section>
+        </div>
         <!-- About Amanda Section -->
         <section class="bg-black">
           <div class="content bw">
