--- a/project/about.html
+++ b/project/about.html
@@ -180,35 +180,38 @@
           <div class="specialty-section">
             <div class="specialty-container">
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Depression" />
+                <img src="images/comfort_hands.webp" alt="Depression" />
                 <div class="specialty-label bg-blue">Depression</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Stress" />
+                <img src="images/couple.webp" alt="Stress" />
                 <div class="specialty-label bg-yellow">Stress</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Abuse" />
+                <img src="images/counch_threePeople.webp" alt="Abuse" />
                 <div class="specialty-label bg-green">Abuse</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Grief" />
+                <img src="images/individual.jpg" alt="Grief" />
                 <div class="specialty-label bg-red">Grief</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Divorce" />
+                <img src="images/couch_twoPeople.webp" alt="Divorce" />
                 <div class="specialty-label bg-orange">Divorce</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Children" />
+                <img src="images/adolecent.webp" alt="Children" />
                 <div class="specialty-label bg-red">Children</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Addiction" />
+                <img src="images/diagnosis.webp" alt="Addiction" />
                 <div class="specialty-label bg-blue">Addiction</div>
               </div>
               <div class="specialty-card">
-                <img src="images/placeholder.png" alt="Relationships" />
+                <img
+                  src="images/counr_twoPeople_hands.webp"
+                  alt="Relationships"
+                />
                 <div class="specialty-label bg-yellow">Relationships</div>
               </div>
             </div>
