--- a/project/book.html
+++ b/project/book.html
@@ -48,7 +48,7 @@
                   </div>
                 </div>
                 <p>
-                  <img src="images/qr.png">
+                  <img src="images/qr.png" alt="QR Code (FAKE)">
                 </p>
               </div>
             </div>
@@ -114,15 +114,6 @@
           </div>
         </section>
 
-        <!-- Success Message Modal -->
-        <!-- <div id="successModal" class="modal">
-          <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <h2>Appointment Request Sent</h2>
-            <p>Thank you for reaching out! We will get back to you soon.</p>
-          </div>
-        </div> -->
-
         <!-- FAQs Section -->
         <section class="faq-section">
           <div class="content">
@@ -150,6 +141,7 @@
               Visit in person or Online <br />
               <span class="color-orange">tailored</span> to your needs.
             </h2>
+          </div>
         <section class="visit-office-section">
           <div class="visit-office-container">
             <!-- Left Side - Contact Info -->
