--- a/project/book.html
+++ b/project/book.html
@@ -14,9 +14,16 @@
     <link rel="stylesheet" href="styles/dark-mode.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;1,400&family=PT+Sans:wght@400;700&family=Delius&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <script defer src="scripts/nvt_script.js"></script>  </head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;1,400&family=PT+Sans:wght@400;700&family=Delius&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <script defer src="scripts/nvt_script.js"></script>
+  </head>
   <body>
     <div class="container">
       <!-- Dynamically Inserted Header -->
@@ -37,18 +44,24 @@
                   <span class="material-icons">call</span>
                   <div>
                     <p>Give us a call</p>
-                    <p class="bold"><a href="tel:+18011234567">(801) 123 - 4567</a></p>
+                    <p class="bold">
+                      <a href="tel:+18011234567">(801) 123 - 4567</a>
+                    </p>
                   </div>
                 </div>
                 <div class="contact-item">
                   <span class="material-icons">email</span>
                   <div>
                     <p>Send us a message</p>
-                    <p class="bold"><a href="mailto:contact@therapist.com">contact@therapist.com</a></p>
+                    <p class="bold">
+                      <a href="mailto:contact@therapist.com"
+                        >contact@therapist.com</a
+                      >
+                    </p>
                   </div>
                 </div>
                 <p>
-                  <img src="images/qr.png" alt="QR Code (FAKE)">
+                  <img src="images/qr.png" alt="QR Code (FAKE)" />
                 </p>
               </div>
             </div>
@@ -136,12 +149,15 @@
         <!-- Book an Appointment Section -->
         <section>
           <div class="content">
-            <p class="subheading color-orange">I am where you need me to be -</p>
+            <p class="subheading color-orange">
+              I am where you need me to be -
+            </p>
             <h2 class="heading">
               Visit in person or Online <br />
               <span class="color-orange">tailored</span> to your needs.
             </h2>
           </div>
+        </section>
         <section class="visit-office-section">
           <div class="visit-office-container">
             <!-- Left Side - Contact Info -->
@@ -162,14 +178,20 @@
                 </div>
                 <div class="contact-item">
                   <span class="material-icons">email</span>
-                  <p><a href="mailto:contact@therapist.com">contact@therapist.com</a></p>
+                  <p>
+                    <a href="mailto:contact@therapist.com"
+                      >contact@therapist.com</a
+                    >
+                  </p>
                 </div>
                 <div class="contact-item">
                   <span class="material-icons">place</span>
                   <p>
-                    <a href="https://www.google.com/maps/search/?q=149W+70th+St,+9000+Los+Angeles,+CA" 
-                       target="_blank" 
-                       rel="noopener noreferrer">
+                    <a
+                      href="https://www.google.com/maps/search/?q=149W+70th+St,+9000+Los+Angeles,+CA"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       149W 70th St, 9000 Los Angeles, CA
                     </a>
                   </p>
